# nixpkgs

maintainers/scripts/: update.nix
nixos/doc/manual-rst/: README.md  default.nix  flake.nix  live.py  pyproject.toml
nixos/doc/manual-rst/source/: conf.py
nixos/doc/manual-rst/source/installation/: installation.xml.rst  installing.xml.md
pkgs/applications/networking/instant-messengers/telegram/tdesktop/: aur-build-fixes.patch  default.nix
pkgs/applications/virtualization/docker/: default.nix
pkgs/development/compilers/elm/: default.nix
pkgs/development/python-modules/generic/: default.nix
pkgs/tools/typesetting/pdf2odt/: default.nix  src.json
pkgs/top-level/: all-packages.nix  perl-packages.nix
