[tool.poetry]
name = "nixos-manual-rst"
version = "0.1.0"
description = ""
authors = ["Rok Garbas <rok@garbas.si>"]

[tool.poetry.dependencies]
python = "^3.8"
livereload = "^2.6.2"

[tool.poetry.dev-dependencies]
recommonmark = "^0.6.0"
sphinx = "^3.1.1"
sphinx_rtd_theme = "0.4.3"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
